<resources>
    <string name="app_name">" donglin3-CountBook"</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_add_counter">Add Counter</string>

    <!--strings for AddNewCounterActivity EditCounterActivity-->
    <string name="counter_name">Counter Name</string>
    <string name="initial_value">Initial Value</string>
    <string name="comment">Comment</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="current_value">Current Value</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="delete">Delete</string>
</resources>
