<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.donglin_countbook.AddNewCounterActivity">

    <EditText
        android:id="@+id/add_counter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/counter_name"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:paddingTop="20dp"
        android:maxLines="1" />

    <EditText
        android:id="@+id/add_initial_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/initial_value"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:maxLines="1" />

    <EditText
        android:id="@+id/add_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:maxLines="1" />


    <Button
    android:id="@+id/create_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/create"
    android:paddingTop="15dp"
    android:paddingBottom="15dp" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:paddingTop="15dp"
        android:paddingBottom="15dp" />
</LinearLayout>